--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <canvas id="GameCanvas"></canvas>
   </body>
+  <script src="./js/gameloop.js"></script>
   <script src="./render.js"></script>
 </html>
