--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <canvas id="GameCanvas"></canvas>
   </body>
   <script src="./js/gameloop.js"></script>
+  <script src="./js/sprite.js"></script>
   <script src="./render.js"></script>
 </html>
